--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "components-font-awesome": "~4.4.0"
+    "fontawesome": "~4.4.0"
   },
   "overrides": {
     "bootstrap-sass": {
