--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-bower-src": "^0.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-inject": "^3.0.0",
     "gulp-jshint": "^2.0.0",
