--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "fontawesome": "~4.4.0"
+    "font-awesome": "fontawesome#~4.5.0"
   },
   "overrides": {
     "bootstrap-sass": {
