--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -35,11 +35,13 @@
     "wiredep": "^2.2.2"
   },
   "dependencies": {
+    "browserify": "^12.0.1",
     "del": "^2.2.0",
     "express": "^4.13.3",
+    "reactify": "^1.1.1",
     "wiredep": "^2.2.2"
   },
-  "engines" : {
-    "node" : "4.2.2"
+  "engines": {
+    "node": "4.2.2"
   }
 }
