--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-bower-src": "^0.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-imagemin": "^2.4.0",
     "gulp-inject": "^3.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-main-bower-files": "^1.2.5",
+    "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "imagemin-pngquant": "^4.2.0",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0",
     "wiredep": "^2.2.2"
